# DEF-W9-23_TAG

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
configs/: debug.toml  default.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: evaluate.py  export.py  train.py  train_cuda.py
src/tag/: __init__.py  dataset.py  dataset_thermal.py  evaluate.py  export.py  losses.py  model.py  serve.py  train.py  train_cuda.py  utils.py
src/tag/cuda/: __init__.py  kernels.py  slot_cuda.py
tasks/: INDEX.md
tests/: test_cuda.py  test_dataset.py  test_export.py  test_model.py
